; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_ingenientdec.c_ingenient_probe.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_ingenientdec.c_ingenient_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32 }

@.str = private unnamed_addr constant [5 x i8] c"MJPG\00", align 1
@AVPROBE_SCORE_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @ingenient_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ingenient_probe(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i8*, i8** %5, align 8
  %7 = call i64 @AV_RN32(i8* %6)
  %8 = call i64 @AV_RN32(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %22, label %10

10:                                               ; preds = %1
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = icmp slt i32 %13, 50
  br i1 %14, label %22, label %15

15:                                               ; preds = %10
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 48
  %20 = call i32 @AV_RB16(i8* %19)
  %21 = icmp ne i32 %20, 65496
  br i1 %21, label %22, label %23

22:                                               ; preds = %15, %10, %1
  store i32 0, i32* %2, align 4
  br label %27

23:                                               ; preds = %15
  %24 = load i32, i32* @AVPROBE_SCORE_MAX, align 4
  %25 = mul nsw i32 %24, 3
  %26 = sdiv i32 %25, 4
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %23, %22
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i64 @AV_RN32(i8*) #1

declare dso_local i32 @AV_RB16(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
